-Improved : Relational cell attribut
Now parameter are setting when you open conditional dialog.
Reduce memory to store condition.

2000-02-12 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-02-18 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now Relational cell attribut is saving in file

2000-02-19 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can show or hide grid
-Fix bug report by Michael Koch (use KNumInput when you resize column or row)
-Bug fix

2000-02-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new fonctions : AND, OR, MOD, BINO, INVBINO

2000-02-21 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new functions : NAND,NOR
-Now you can "Underline"

2000-02-22 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-02-24 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new functions upper and lower
-Now "hide table" and "hide grid" are saving
-Improved "kspread_dlg_show" 
-Add shortcut
 
2000-02-26 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new function "find"
-bug fix

2000-03-03 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new dialog box "Linear Series" =>now you can create linear series
-Improved kspread_dlg_conditional =>now there is a preview
But I can't change color because there isn't "setColor" for a QLineEdit 
bug ? perhaps in QT2.2
Now I use knumvalidator for QLineEdit
-Bug fix . Fix bug that Michael Koch reported me in kspread_dlg_formula
  centered border on cell grid ..
-Bug fix in KSpread_dlg_conditional.